task5/tests/group/output/test2.out
lli: <stdin>:26:15: error: use of undefined value '%-22047'
%t1 = zext i8 %-22047 to i32
              ^

